# hw14.2

./: .coverage  .coveragerc  .gitignore  README.md  category.py  coverage_report.txt  main.py  product.py  pyproject.toml  pyproject.toml.bak  test_category.py  test_product.py
src/: category.py  product.py
test/: test_category.py  test_product.py
tests/: test_category.py  test_product.py
