[tool.poetry]
name = "hw14-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw14"}]

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 88
[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.coverage.run]
omit = ["*/test/*", "*/tests/*", "*/__pycache__/*"]
